# simplestGraphRendering

./: .gitignore  CMakeLists.txt  README.md  build.sh
resources/: background_01.ppm  background_02.ppm  background_03.ppm  dead_forest.ppm  font_atlas.ppm  icon_atlas.ppm  notx.ppm  test.gl  texture_list
src/: collision_sphere_f.glsl  collision_sphere_v.glsl  debug_f.glsl  debug_v.glsl  edge_f.glsl  edge_v.glsl  icon_f.glsl  icon_v.glsl  polygon_f.glsl  polygon_v.glsl  simplestGraphRendering.cpp  surface_sphere_f.glsl  surface_sphere_v.glsl  textLabel_f.glsl  textLabel_v.glsl  triangleGraph_nodeEdge_f.glsl  triangleGraph_nodeEdge_v.glsl  triangleGraph_picking_f.glsl  triangleGraph_picking_v.glsl  triangleGraph_sphere_f.glsl  triangleGraph_sphere_v.glsl  triangleGraph_triangle_f.glsl  triangleGraph_triangle_v.glsl
vs2013/simplestGraphRendering/: simplestGraphRendering.sln  simplestGraphRendering.vcxproj  simplestGraphRendering.vcxproj.filters
vs2015/simplestGraphRendering/: simplestGraphRendering.sln
